--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,9 @@
 
 <!-- start custom head snippets -->
 
+<!-- Support for Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 <!-- Support for Academicons -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
