--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -30,7 +30,7 @@
 .archive__subtitle {
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
-  font-size: $type-size-5;
+  font-size: $type-size-4;
   color: var(--global-text-color-light);
   border-bottom: 1px solid var(--global-border-color);
 
@@ -41,7 +41,7 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
-  font-family: $sans-serif-narrow;
+  font-family: $serif;
 
   a + a {
     opacity: 0.5;
@@ -222,7 +222,7 @@
 
   &--center {
     @include full();
-    font-size: 1.25rem;
+    font-size: 1rem;
 
     .archive__item-teaser {
       margin-bottom: 2em;
